2000-04-04  Andy Hertzfeld <andy@eazel.com>

	* libgnomevfs/gnome-vfs-uri.c:
	fixed critical assertion that Nautilus was encountering using
	non-filesystem uris by making sure the uri was reference before
	calling unref.
	
2000-04-04  Ian McKellar <yakk@yakk.net>
	* modules/http-method.c
	Fixed WebDAV directory code to remove leading "/" from filenames.

2000-03-29  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-directory.c (open_from_uri):
	Use CHECK_IF_SUPPORTED macro to be consistent with the rest of the file.

	* libgnomevfs/gnome-vfs-private-ops.c:
	(gnome_vfs_open_uri_cancellable), (gnome_vfs_create_uri_cancellable),
	(gnome_vfs_set_file_info_cancellable):
	Added missing checks for NULL in the module. The rest of the operations
	had checks for NULL.
	
	* libgnomevfs/gnome-vfs-uri.c:
	(gnome_vfs_uri_is_local): Check for a NULL is_local pointer. Unlike the
	other operations, for this one it's illegal to be NULL since there is
	no way to return the NOTSUPPORTED error code.

	* test/.cvsignore: Missing file.

2000-03-28 Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	(move_file): initialize "skip" properly.
	
	* libgnomevfs/gnome-vfs-uri.c:
	(gnome_vfs_uri_get_parent): strip trailing slashes. Handle 
	multiple slashes properly.

	* libgnomevfs-pthread/gnome-vfs-job.c:
	(execute_xfer): pass the proper job structure.

	* libgnomevfs-pthread/gnome-vfs-async-ops.c:
	(pthread_gnome_vfs_async_xfer): pass the proper job type selector.
	
2000-03-28 John Sullivan <sullivan@eazel.com>
	* gnome-vfs-uri.c:
	(gnome_vfs_uri_extract_short_name): Check for empty-string
	host name as well as NULL.

2000-03-28 John Sullivan <sullivan@eazel.com>

	* gnome-vfs-uri.h,
	* gnome-vfs-uri.c:
	(gnome_vfs_uri_extract_short_name): Made this function return the
	host name (if any) when there's no path. Formerly it just returned
	"/" in that case.
	(gnome_vfs_uri_extract_short_path_name): New function, really a