@@ -1,3 +1,9 @@
+2000-04-05  Ian McKellar <yakk@yakk.net>
+	* modules/http-method.c
+	Added a create method, and fixed the write/close method so that
+	Nautilus can successfully store metafiles, and so writing to WebDAV
+	repositories will work in the future.
+
 2000-04-04  Andy Hertzfeld <andy@eazel.com>
 
 	* libgnomevfs/gnome-vfs-uri.c:
